cabal-version: 3.0
name:          q2io-coin-selection
version:       0.3.0.0
synopsis:      Coin selection algorithm for Cardano transactions
license:       Apache-2.0
license-files: LICENSE
maintainer:
author:
homepage:
bug-reports:
description:
build-type:    Simple

common lang
  default-language:   Haskell2010
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    ExplicitForAll
    FlexibleContexts
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    MultiParamTypeClasses
    NumericUnderscores
    ScopedTypeVariables
    StandaloneDeriving

  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities

library
  import:          lang
  exposed-modules:
    Q2io.CoinSelection
    Q2io.CoinSelection.Class
    Q2io.MockChain.CoinSelection
    Q2io.Query
    Q2io.UTxOCompatibility

  hs-source-dirs:  lib
  build-depends:
    , aeson
    , base              >=4.14.0
    , containers        >=0.6.5
    , contra-tracer
    , data-default
    , exceptions
    , lens
    , q2io-base
    , q2io-mockchain
    , q2io-node-client
    , q2io-optics
    , q2io-wallet
    , QuickCheck
    , servant-client
    , text

  -- cardano dependencies
  build-depends:
    , cardano-api
    , cardano-ledger-core
    , cardano-ledger-shelley
    , cardano-slotting
    , either-result
    , mtl
    , transformers

test-suite q2io-coin-selection-test
  import:         lang
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  ghc-options:
    -fobject-code -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas -fno-specialise

  main-is:        Spec.hs
  other-modules:
    Scripts
    Scripts.MatchingIndex

  build-depends:
    , base                                                              >=4.14.0
    , cardano-api
    , cardano-ledger-alonzo
    , cardano-ledger-babbage
    , cardano-ledger-shelley
    , containers
    , lens
    , mtl
    , plutus-ledger-api:{plutus-ledger-api, plutus-ledger-api-testlib}
    , plutus-tx
    , plutus-tx-plugin
    , q2io-base
    , q2io-coin-selection
    , q2io-mockchain
    , q2io-optics
    , q2io-wallet
    , QuickCheck
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , transformers
