cabal-version: 3.0
name:          q2io-devnet
version:       0.3.0.0
synopsis:      Devnet for integration tests
license:       Apache-2.0
license-files: LICENSE
maintainer:
author:
homepage:
bug-reports:
description:
build-type:    Simple
data-files:
  config/credentials/faucet.sk
  config/credentials/faucet.vk
  config/devnet/byron-delegate.key
  config/devnet/byron-delegation.cert
  config/devnet/cardano-node.json
  config/devnet/genesis-alonzo.json
  config/devnet/genesis-byron.json
  config/devnet/genesis-conway.json
  config/devnet/genesis-shelley.json
  config/devnet/kes.skey
  config/devnet/opcert.cert
  config/devnet/vrf.skey

common lang
  default-language:   Haskell2010
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    ExplicitForAll
    FlexibleContexts
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    MultiParamTypeClasses
    NumericUnderscores
    ScopedTypeVariables
    StandaloneDeriving

  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities

library
  import:          lang
  exposed-modules:
    Q2io.Devnet.CardanoNode
    Q2io.Devnet.CardanoNode.Types
    Q2io.Devnet.Logging
    Q2io.Devnet.NodeQueries
    Q2io.Devnet.Utils
    Q2io.Devnet.Wallet
    Q2io.Devnet.WalletServer

  hs-source-dirs:  lib
  build-depends:
    , aeson
    , async
    , base                         >=4.14.0
    , bytestring
    , cardano-api
    , cardano-ledger-core
    , cardano-ledger-shelley
    , cardano-slotting
    , containers
    , contra-tracer
    , directory
    , exceptions
    , filepath
    , http-client
    , HUnit
    , io-classes
    , iohk-monitoring
    , lens
    , mtl
    , ouroboros-consensus
    , ouroboros-consensus-cardano
    , ouroboros-network-protocols
    , prettyprinter
    , process
    , q2io-base
    , q2io-coin-selection
    , q2io-optics
    , q2io-wallet
    , servant-client
    , servant-client-core
    , si-timers
    , stm
    , temporary
    , text
    , time
    , unix

  -- cardano-node deps.
  -- logging
  other-modules:   Paths_q2io_devnet
  autogen-modules: Paths_q2io_devnet

test-suite q2io-devnet-test
  import:         lang
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  ghc-options:    -threaded -rtsopts
  other-modules:
  hs-source-dirs: test
  build-depends:
    , aeson
    , base                 >=4.14.0
    , cardano-api
    , cardano-ledger-core
    , containers
    , filepath
    , mtl
    , q2io-base
    , q2io-devnet
    , tasty
    , tasty-hunit
