cabal-version: 3.0
name:          q2io-mockchain
version:       0.3.0.0
synopsis:      Minimal mockchain for testing plutus scripts
license:       Apache-2.0
license-files: LICENSE
maintainer:
author:
homepage:
bug-reports:
description:
build-type:    Simple

common lang
  default-language:   Haskell2010
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    ExplicitForAll
    FlexibleContexts
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    MultiParamTypeClasses
    NumericUnderscores
    ScopedTypeVariables
    StandaloneDeriving

  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities

library
  import:          lang
  exposed-modules:
    Q2io.MockChain
    Q2io.MockChain.Defaults
    Q2io.MockChain.Gen
    Q2io.MockChain.Utils
    Q2io.NodeParams

  hs-source-dirs:  lib
  build-depends:
    , base             >=4.14.0
    , bytestring
    , containers
    , data-default
    , HUnit
    , lens
    , mtl
    , q2io-base
    , q2io-optics
    , q2io-wallet
    , QuickCheck
    , sop-core
    , sop-extras
    , strict-sop-core
    , time
    , transformers

  -- cardano dependencies
  build-depends:
    , cardano-api
    , cardano-crypto-class         >=2.1.1.0
    , cardano-ledger-alonzo
    , cardano-ledger-babbage
    , cardano-ledger-binary
    , cardano-ledger-core
    , cardano-ledger-shelley
    , cardano-slotting
    , ouroboros-consensus
    , ouroboros-consensus-cardano
    , plutus-core
    , plutus-ledger-api
