cabal-version: 3.0
name:          q2io-node-client
version:       0.3.0.0
synopsis:      Conveniences for cardano-node clients
license:       Apache-2.0
license-files: LICENSE
maintainer:
author:
homepage:
bug-reports:
description:
build-type:    Simple

common lang
  default-language:   Haskell2010
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    ExplicitForAll
    FlexibleContexts
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    MultiParamTypeClasses
    ScopedTypeVariables
    StandaloneDeriving

  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities

library
  import:          lang
  exposed-modules:
    Q2io.NodeClient.ChainTip
    Q2io.NodeClient.Fold
    Q2io.NodeClient.Progress
    Q2io.NodeClient.Resuming
    Q2io.NodeClient.Types
    Q2io.NodeClient.WaitForTxnClient

  hs-source-dirs:  lib
  build-depends:
    , aeson
    , base          >=4.14.0
    , containers
    , mtl
    , stm
    , text
    , time
    , transformers

  build-depends:   q2io-base

  -- cardano dependencies
  build-depends:
    , cardano-api
    , cardano-slotting
    , ouroboros-consensus
    , ouroboros-network-protocols
    , typed-protocols
