cabal-version: 3.0
name:          q2io-optics
version:       0.3.0.0
synopsis:      Optics for plutus-ledger-api and cardano-api
license:       Apache-2.0
license-files: LICENSE
maintainer:
author:
homepage:
bug-reports:
description:
build-type:    Simple

common lang
  default-language:   Haskell2010
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    ExplicitForAll
    FlexibleContexts
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    MultiParamTypeClasses
    NumericUnderscores
    ScopedTypeVariables
    StandaloneDeriving

  ghc-options:
    -Wall -Werror -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities

library
  import:          lang
  exposed-modules:
    Q2io.CardanoApi.Lenses
    Q2io.PlutusLedgerApi.Optics
    Q2io.Scripts

  hs-source-dirs:  lib
  build-depends:
    , base
    , cardano-api
    , cardano-ledger-core
    , cardano-ledger-shelley
    , containers
    , lens
    , plutus-ledger-api
    , plutus-tx
