cabal-version: 3.0
name:          q2io-wallet
version:       0.3.0.0
synopsis:      Simple wallet
license:       Apache-2.0
license-files: LICENSE
maintainer:    kayvank
author:        kayvan@q2io.com
homepage:      https://github.com/kayvank
bug-reports:
description:
build-type:    Simple

common lang
  default-language:   Haskell2010
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    ExplicitForAll
    FlexibleContexts
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    MultiParamTypeClasses
    NumericUnderscores
    ScopedTypeVariables
    StandaloneDeriving

  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities

library
  import:          lang
  exposed-modules:
    Q2io.Wallet
    Q2io.Wallet.API
    Q2io.Wallet.Cli
    Q2io.Wallet.Cli.Command
    Q2io.Wallet.Cli.Config
    Q2io.Wallet.MockWallet
    Q2io.Wallet.NodeClient
    Q2io.Wallet.NodeClient.BalanceClient
    Q2io.Wallet.Operator
    Q2io.Wallet.WalletState

  hs-source-dirs:  lib
  build-depends:
    , aeson
    , aeson-pretty
    , base
    , bytestring
    , containers
    , katip
    , lens
    , mtl
    , optparse-applicative
    , q2io-base
    , q2io-node-client
    , q2io-optics
    , servant
    , servant-client
    , servant-client-core
    , servant-server
    , stm
    , text
    , transformers
    , warp

  -- cardano dependencies
  build-depends:
    , cardano-api
    , cardano-ledger-core
    , cardano-ledger-shelley
    , plutus-ledger-api

executable q2io-wallet
  import:           lang
  main-is:          Main.hs
  build-depends:
    , base
    , q2io-wallet

  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -O2
